--- a/k8s/build-config.yml
+++ b/k8s/build-config.yml
@@ -7,9 +7,9 @@ metadata:
 data:
   build-config.properties: |
     project=go-demo-3
-    image=vfarcic/go-demo-3
-    domain=acme.com
-    addr=go-demo-3.acme.com
-    cmAddr=cm.acme.com
+    image=ammarqqqq/go-demo-3
+    domain=psamman.com
+    addr=go-demo-3.psamman.com
+    cmAddr=cm.psamman.com
     chartVer=0.0.1
 
